--- a/html/templates/avtomon.com/login.html
+++ b/html/templates/avtomon.com/login.html
@@ -6,7 +6,7 @@
 	<title>Авторизация</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-    <link type="text/css" rel="stylesheet" href="/html/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/vendor/bower-asset/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="/html/css/main.min.css"/>
     <link rel="stylesheet" type="text/css" href="/html/css/style.min.css"/>
     <style>
