--- a/html/templates/avtomon.com/confirm_email.html
+++ b/html/templates/avtomon.com/confirm_email.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8" />
+    <!--[if lt IE 9]><script src="/vendor/bower-asset/html5shiv/dist/html5shiv.min.js"></script><![endif]-->
 	<title>Доступ запрещен</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link type="text/css" rel="stylesheet" href="/html/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/vendor/bower-asset/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="/html/css/main.min.css"/>
     <link rel="stylesheet" type="text/css" href="/html/css/style.min.css"/>
     <link rel="stylesheet" type="text/css" href="/html/css/error.min.css"/>
