--- a/html/templates/avtomon.com/login.html
+++ b/html/templates/avtomon.com/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <meta charset="utf-8" />
+    <!--[if lt IE 9]><script src="/vendor/bower-asset/html5shiv/dist/html5shiv.min.js"></script><![endif]-->
 	<title>Авторизация</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
@@ -168,10 +168,10 @@
         <input type="hidden" name="token">
     </form>
 </body>
-<script src="/html/js/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="/html/js/materialize.min.js"></script>
-<script src="/html/js/apply.ajax.min.js"></script>
-<script src="/html/js/jquery.md5.min.js" defer></script>
+<script src="/vendor/bower-asset/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/bower-asset/materialize/dist/js/materialize.min.js"></script>
+<script src="/vendor/avtomon/applyAjax.js/apply.ajax.min.js"></script>
+<script src="/vendor/avtomon/jQuery-MD5/jquery.md5.js" defer></script>
 <script>
     $.ajaxSetup({ cache: true });
 
