--- a/html/templates/avtomon.com/project.html
+++ b/html/templates/avtomon.com/project.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8" />
+    <!--[if lt IE 9]><script src="/vendor/bower-asset/html5shiv/dist/html5shiv.min.js"></script><![endif]-->
     <title class="in_text_title"></title>
     <meta name="description" class="in_content_brief"/>
 
-    <link type="text/css" rel="stylesheet" href="/html/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/vendor/bower-asset/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="/html/css/main.min.css"/>
     <link rel="stylesheet" type="text/css" href="/html/css/style.min.css"/>
 </head>
@@ -127,6 +127,6 @@
     </div>
 </div>
 </body>
-<script src="/html/js/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="/html/js/materialize.min.js"></script>
+<script src="/vendor/bower-asset/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/bower-asset/materialize/dist/js/materialize.min.js"></script>
 </html>  
