--- a/html/templates/avtomon.com/register.html
+++ b/html/templates/avtomon.com/register.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8" />
+    <!--[if lt IE 9]><script src="/vendor/bower-asset/html5shiv/dist/html5shiv.min.js"></script><![endif]-->
     <title>Регистрация</title>
-    <link type="text/css" rel="stylesheet" href="/html/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/vendor/bower-asset/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="/html/css/main.min.css"/>
     <link rel="stylesheet" type="text/css" href="/html/css/style.min.css"/>
 </head>
@@ -154,14 +155,14 @@
         </div>
     </div>
 </body>
-<script src="/html/js/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="/html/js/materialize.min.js"></script>
-<script src="/html/js/apply.ajax.min.js"></script>
-<script src="/html/js/jquery.myForm2.min.js" defer></script>
-<link rel="stylesheet" href="/html/js/chosen/chosen.css">
-<script src="/html/js/chosen/chosen.jquery.min.js" defer></script>
-<script src="/html/js/jquery.md5.min.js" defer></script>
-<script type="text/javascript" src="/html/js/jquery.pstrength-min.1.2.js" defer></script>
+<script src="/vendor/bower-asset/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/bower-asset/materialize/dist/js/materialize.min.js"></script>
+<script src="/vendor/avtomon/applyAjax.js/apply.ajax.min.js"></script>
+<script src="/vendor/avtomon/myForm/myForm.min.js" defer></script>
+<link rel="stylesheet" href="/vendor/bower-asset/chosen/chosen.css">
+<script src="/vendor/bower-asset/chosen/chosen.jquery.js" defer></script>
+<script src="/vendor/avtomon/jQuery-MD5/jquery.md5.js" defer></script>
+<script src="/vendor/avtomon/pStrength/pStrength.jquery.js" defer></script>
 <script>
     $(function ()
     {
